add title section

--- a/index.html
+++ b/index.html
@@ -12,21 +12,22 @@
 
     <!-- Header -->
     <header>
-       <div class="text"> Top Bar
+       <div class="text"> Navigation
        </div>
     </header>
 
     <!-- Main -->
 
     <main>
-        <div class="text"> Main Bar
+        <div class="text"> Intro
         </div>
     </main>
 
-    <!-- Float section -->
+    <!-- I section -->
 
-    <section>
-        
+    <section class="title"">
+        <div class="text"> Title
+        </div>
     </section>
     
 </body>
