organizzazione con commenti

--- a/index.html
+++ b/index.html
@@ -4,31 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Scheletro</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <!-- Header -->
-    <header>
-       <div class="text"> Navigation
-       </div>
-    </header>
+    <!-- HEADER -->
+        <header>
 
-    <!-- Main -->
+        </header>
 
-    <main>
-        <div class="text"> Intro
-        </div>
-    </main>
+    <!-- MAIN -->
+        <main>
 
-    <!-- I section -->
+        </main>
 
-    <section class="title"">
-        <div class="text"> Title
-        </div>
-    </section>
-    
+    <!-- TITLE SECTION -->
+        <section>
+
+        </section>
+
+    <!-- FLOAT SECTION -->
+        <section>
+
+        </section>
+
+    <!-- FOOTER -->
+        <footer>
+
+        </footer>
+        
 </body>
 </html>
