--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
 
     <!-- HEADER -->
         <header>
-
+            Header
         </header>
 
     <!-- MAIN -->
         <main>
-
+            Main
         </main>
 
     <!-- TITLE SECTION -->
-        <section>
-
+        <section class="title">
+            Title
         </section>
 
-    <!-- FLOAT SECTION -->
-        <section>
-
+    <!-- FLOAT SECTION BOX -->
+        <section class="box">
+            Float
         </section>
 
     <!-- FOOTER -->
         <footer>
-
+            Foter
         </footer>
-        
+
 </body>
 </html>
