--- a/index.html
+++ b/index.html
@@ -27,7 +27,16 @@
 
     <!-- FLOAT SECTION BOX -->
         <section class="box">
-            Float
+
+            <!-- left bar -->
+            <aside class="left">TEST</aside>
+
+            <!-- center bar -->
+            <section class="center">TEST</section>
+
+            <!-- right bar -->
+            <aside class="right">TEST</aside>
+
         </section>
 
     <!-- FOOTER -->
