--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </section>
 
     <!-- FLOAT SECTION BOX -->
-        <section class="box">
+        <section class="clearfix box">
 
             <!-- left bar -->
             <aside class="left">TEST</aside>
